--- a/Builder/pedido-nota-fiscal/pom.xml
+++ b/Builder/pedido-nota-fiscal/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.danilogmoura.builder</groupId>
-    <artifactId>pedido-nota-fiscal</artifactId>
+    <artifactId>order-nota-fiscal</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
